Set navColumn to have fixed (large) height to prevent wrap-under.  A hack and should be replace with a more "elastic" style. Renamed five-minute-introduction to introduction as there is only one and qualifying it is pointless.
git-svn-id: http://svn.codehaus.org/picocontainer/java/2.x/trunk@3725 ac66bb80-72f5-0310-8d68-9f556cfffb23

--- a/pico/distribution/src/site/resources/style/pico.css
+++ b/pico/distribution/src/site/resources/style/pico.css
@@ -9,13 +9,15 @@
 #breadcrumbs {
   border: 1px solid;
   background-color: #090;
+  color: #fff;
 }
 
-#leftColumn {
-  margin: 10px 0 0 5px;
+#navColumn {
+  margin: 10px 10px 10px 10px;
   border: 1px solid #fff;
   background-color: #fff;
   float: left;
+  height: 5000px;
 }
 
 #navColumn h1 {
